# tree-sitter-editorconfig

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  regenerate.yml
bindings/c/: tree-sitter-editorconfig.h  tree-sitter-editorconfig.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_editorconfig/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEditorconfigTests/: TreeSitterEditorconfigTests.swift
examples/: .editorconfig  django.editorconfig  elasticsearch.editorconfig  free-programming-books.editorconfig  roslyn.editorconfig  simple.editorconfig  small.editorconfig
queries/: highlights.scm
queries/editorconfig/: highlights.scm
scripts/: download_configs.py
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: braces.txt  brackets.txt  main.txt
