[package]
name = "tree-sitter-editorconfig"
description = "Editorconfig grammar for tree-sitter"
version = "1.1.0"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "editorconfig"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/valdezfomar/tree-sitter-editorconfig"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
