[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-editorconfig"
description = "Editorconfig grammar for tree-sitter"
version = "1.0.3"
keywords = ["incremental", "parsing", "tree-sitter", "editorconfig"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Omar Valdez", email = "omarantoniovaldezf2@gmail.com" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/valdezfomar/tree-sitter-editorconfig"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
include = [
  "scripts/*.py",
]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
